# jwalk-meta

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  TEST_REPORT.md  test_ft.rs
.github/workflows/: ci.yml  linux-bench.yml
docs/: class77-poc-verdict.md  jwalk-meta-ext-optimization.md
examples/: check_layout.rs  class77_poc.rs  debug_hang.rs  scan_bench.rs  scan_bench_ext.rs  scan_unix.rs  smb_enum_bench.rs  test_ft.rs
src/: lib.rs
src/core/: dir_entry.rs  dir_entry_iter.rs  error.rs  fs_detect.rs  index_path.rs  linux_io_uring.rs  metadata.rs  mod.rs  nt_dir_enum.rs  ordered_queue.rs  priority_queue.rs  read_dir.rs  read_dir_iter.rs  read_dir_spec.rs  run_context.rs  unix_dir_enum.rs  weighted.rs
tests/: ci_benchmark.rs  integration.rs  memory_stability.rs  permission_denied.rs  stress_100k.rs  unicode_filenames.rs  windows_symlinks.rs
tests/util/: mod.rs
