[package]
name = "jwalk-meta"
version = "1.0.9"
authors = ["Jesse Grosjean <jesse@hogbaysoftware.com>", "Sebastian Thiel <byronimo@gmail.com>", "Martin Bammer <mrbm74@gmail.com>"]
description = "Filesystem walk performed in parallel with streamed and sorted results."
documentation = "https://docs.rs/jwalk-meta/"
homepage = "https://github.com/brmmm3/jwalk-meta"
repository = "https://github.com/brmmm3/jwalk-meta"
readme = "README.md"
keywords = ["directory", "recursive", "walk", "iterator", "parallel"]
categories = ["filesystem", "concurrency"]
license = "MIT"
edition = "2021"

[features]
default = []
# 启用则强制 Unix 走 std::fs::read_dir fallback（benchmark 对比用）
# 不启用时 Linux 走 getdents64 直调路径
legacy-read-dir = []
windows-only = []  # Windows-only examples (class77_poc, test_ft)，需要时 --features windows-only

[[example]]
name = "class77_poc"
required-features = ["windows-only"]

[[example]]
name = "test_ft"
required-features = ["windows-only"]

[badges]
travis-ci = { repository = "brmmm3/jwalk-meta" }

[dependencies]
rayon = "1.10"
crossbeam = "0.8"
smallvec = "1"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["std", "winioctl", "ioapiset", "fileapi", "minwinbase", "handleapi", "libloaderapi", "winbase"] }

[target.'cfg(unix)'.dependencies]
libc =  "0.2"

# Linux io_uring 批量 STATX（仅 Linux）。
# 内核要求：5.6+ (statx opcode), 5.18+ (setup_submit_all)
# 注意：feature=legacy-read-dir 启用时此依赖仍会拉入但不被使用
#（Cargo 不支持 target.cfg.dependencies 中的 feature= 判断）。
[target.'cfg(target_os = "linux")'.dependencies]
io-uring = "0.7"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
fs_extra = "1.3"
walkdir = "2.5"
ignore = "0.4"
tempfile = "3.10"
num_cpus = "1.16"
lazy_static = "1.4"
reqwest = { version = "0.12", features = ["blocking"] }
flate2 = "1.0"
tar = "0.4"

[[bench]]
name = "walk_benchmark"
harness = false
